# Nmap Changelog ($Id$); -*-text-*-

o Added a GKrellM service probe from Toni Ruottu.

o [NSE] Removed the nmap.get_interface_link function, which was
  deprecated by the new nmap.get_interface_info. The sniffer-detect
  script now calls the nmap.get_interface_info function to retrieve
  the network interface link type. [Djalal]

o [NSE] Fixed a bug reported by Daniel Miller that was causing the
  nfs-ls script to ignore NFS mounts when the Mount version is 1.
  [Djalal]

o [NSE] Added omp2-brute and omp2-enum-targets, which respectively get
  authentication credentials and then a list of scanning targets from
  the OpenVAS Management Protocol. [Henri Doreau]

o [NSE] Added backorifice-info from Gorjan Petrovski, which retrieves
  lots of system information from a BackOrifice server.

o Added a service probe for BackOrifice contributed by Gorjan
  Petrovski.

o Added a service probe for Zend Java Bridge, which is vulnerable if
  exposed to an untrusted network. It was contributed by Michael
  Schierl.

o [NSE] Added the afp-ls script that lists files accessible on remote
  AFP Volumes. [Patrik]
  
o [NSE] Added the targets-sniffer script by Nick Nickolaou. It sniffs
  on an interface for a configurable amount of time, then displays the
  IPv4 addresses found and optionally adds them to the scanning queue.

o [NSE] Added nmap.get_interface and nmap.get_interface_info functions
  so scripts can access characteristics of the scanning interface.
  [Djalal]

o [NSE] Added epmd-info.nse, which gets a list of Erlang node port
  numbers. [Toni Ruottu]

o [NSE] Added http-affiliate-id.nse, which scrapes a web page for
  affiliate IDs (like Google AdSense and Amazon associates) that can
  be used to link sites to the same owner. [Hani Benhabiles, Daniel
  Miller]

o Fixed an overflow in scan elapsed time display that caused negative
  times to be printed after about 25 days. [Daniel Miller]

o [NSE] ssh-hostkey now additionally has a postrule that prints hosts